# ChessProject

./: .gitignore  Cargo.toml  README.md  ai.py  ai_move_finder.py  engine.py  engine_advanced.py  generate_chess_engine.bat  main.py  pyproject.toml
V2/: engine_bitboard.py
benches/: move_gen_benchmark.rs
src/: Perft_Data.txt  ai_move_finder.py  ai_move_finder_rust.py  bitboard.py  chess_game.py  chess_game_rust.py  engine_advanced.py  engine_bitboard.py  interesting_positions.txt  lib.rs  main.rs  perft.py  test_pyrust.py
src/V2/: bitboard.py
src/V3/: ai_move_finder_rust.py  chess_game_rust.py  lib.rs  test_pyrust.py
src/V3/engine_modules/: best_move_finder.rs  castle_rights.rs  game_state.rs  macros.rs  mod.rs  moves.rs  opening_book.rs  perft.rs  piece.rs  special_bitboards.rs  trans_table.rs  zobrist.rs
src/engine_modules/: best_move_finder.rs  game_state.rs  macros.rs  mod.rs  moves.rs  opening_book.rs  perft.rs  piece.rs  special_bitboards.rs  trans_table.rs  zobrist.rs
